# kite

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md
demo/: README.md  nginx.yaml  slow-server.yaml  spammer.yaml
kite/: Cargo.toml  build.rs
kite-ebpf/: Cargo.toml
kite-ebpf-common/: Cargo.toml
kite-ebpf-common/src/: lib.rs
kite-ebpf-types/: Cargo.toml
kite-ebpf-types/src/: lib.rs
kite-ebpf/src/: contrack.rs  http.rs  main.rs  maps.rs  tcp.rs  utils.rs
kite-ebpf/src/bindings/: mod.rs  network_headers.rs
kite-ebpf/src/programs/: cgroup_skb.rs  cgroup_sock.rs  mod.rs
kite-k8s-admit/: Cargo.toml  README.md
kite-k8s-admit/src/: config.rs  main.rs
kite/.cargo/: config.toml
kite/src/: cgroup2.rs  daemon.rs  ebpf.rs  http.rs  ipc.rs  lib.rs  main.rs  metrics.rs  perf_reader.rs  socket.rs  stats.rs  utils.rs
kite/src/k8s/: mod.rs  pods.rs
manifests/: admission_controller.yaml  certs.yaml  daemonset.yaml
scripts/: build-and-load-to-kind.sh  create_test_cluster.sh  kind.yaml
src/: daemon.rs  main.rs
src/k8s/: mod.rs
