[package]
name = "kite-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
kite-ebpf-types = { path = "../kite-ebpf-types", default-features = false, features = []}
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
memoffset = "0.8"
network-types = "0.0.7"

[build-dependencies]
which = { workspace = true }

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1

[[bin]]
name = "kite"
path = "src/main.rs"
