[package]
name = "kite-k8s-admit"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
tokio-serde = { workspace = true }
tokio-util = { workspace = true }
kube = { workspace = true }
k8s-openapi = {workspace = true }
json-patch = "2"
jsonptr = "0.4.7"
anyhow = { workspace = true, default-features = true }
warp = { version = "0.3.7", features = ["tls"] }
serde_json = { workspace = true }
serde = { workspace = true }
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
serde_yaml = "0.9.34"

[[bin]]
name = "kite-k8s-admit"
path = "src/main.rs"
